# DateUtil

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
src/DateUtil/: __init__.py  main.py
src/DateUtil/core/: core.py
src/dateutil/core/: core.py
