[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "DateUtil"
version = "0.1.0"
description = "Utility library for common datetime operations"
readme = "README.md"
authors = [{ name = "Louis Goodnews", email = "louisgoodnews95@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []
